--- a/_sass/head.scss
+++ b/_sass/head.scss
@@ -18,10 +18,16 @@
     }
     .space {
         flex-grow: 1;
+        min-width: 20px;
     }
-    .menu>li {
-        display: inline-block;
-        padding: 0px 10px;
-        vertical-align: middle;
+    .menu {
+        display: flex;
+        li {
+            a {
+                padding: 5px 10px;
+            }
+            display: inline-block;
+            vertical-align: middle;
+        }
     }
 }
